# uom_fse_dl_workshop

./: .gitignore  README.md  SE01_CA_Intro_to_pytorch.ipynb  SE02_CA_Artificial_neural_networks.ipynb  SE03_CA_Training_neural_networks.ipynb  SE04_CA_Convolutional_Neural_Networks.ipynb  SE05_CA_Transfer_Learning.ipynb  colab_utils.txt  pyproject.toml  requirements.txt  update_version.py
slides/: SE02.pptx  SE03.pptx  ~$SE03_FSE_DL_WORKSHOP.pptx
solutions/: SE01_SL_Intro_to_pytorch.ipynb  SE02_SL_Artificial_neural_networks.ipynb  SE03_SL_Training_neural_networks.ipynb  SE04_SL_Convolutional_Neural_Networks.ipynb  SE05_SL_Transfer_Learning.ipynb
utils/: __version__.py  core.py  solutions.json
utils/data/: datasets.json
utils/plotting/: __init__.py  plots.py  se02_plots.py
